Fix: sécurisation du parsing JSON pour le login en production

--- a/config.env.example
+++ b/config.env.example
@@ -41,7 +41,7 @@ SESSION_SECRET=your-session-secret-here
 
 # URL de connexion PostgreSQL (optionnel si vous utilisez Supabase uniquement)
 # Format: postgresql://user:password@host:port/database
-DATABASE_URL=postgresql://postgres:password@localhost:5432/salonpilot
+DATABASE_URL=postgresql://postgres:password@localhost:5432/witstyl
 
 # =====================================================
 # CONFIGURATION OPENAI (OPTIONNEL - pour l'IA vocale)
@@ -68,9 +68,9 @@ REPLIT_URL=https://your-app.replit.app
 # CONFIGURATION NOTIFICATIONS (OPTIONNEL)
 # =====================================================
 
-# Provider SMS (smsup | twilio-sms | twilio-whatsapp | clicksend)
-# Défaut: twilio-sms
-SMS_PROVIDER=twilio-sms
+# Provider SMS (uniquement clicksend)
+# Défaut: clicksend
+SMS_PROVIDER=clicksend
 
 # SMSup - Provider SMS suisse (legacy)
 # Token API (https://doc.smsup.ch/fr/api/sms/token/creer-token)
@@ -81,7 +81,7 @@ SMSUP_API_TOKEN=your-smsup-api-token
 # SMSUP_PASSWORD=your-smsup-password
 
 # Nom de l'expéditeur SMS (votre nom de salon ou numéro - max 11 caractères)
-SMSUP_SENDER=SalonPilot
+SMSUP_SENDER=Witstyl
 
 # URL de l'API SMSup (optionnel, défaut: https://api.smsup.ch/send)
 # SMSUP_API_URL=https://api.smsup.ch/send
@@ -94,7 +94,7 @@ TWILIO_AUTH_TOKEN=your-twilio-auth-token
 # Numéro WhatsApp (format: whatsapp:+14155238886)
 TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
 
-# Numéro SMS ou Sender ID alphanumérique (format: +14155238886 ou "SalonPilot")
+# Numéro SMS ou Sender ID alphanumérique (format: +14155238886 ou "Witstyl")
 TWILIO_SMS_FROM=+14155238886
 
 # Messaging Service SID (optionnel, priorité sur FROM)
@@ -105,8 +105,8 @@ TWILIO_SMS_FROM=+14155238886
 CLICKSEND_USERNAME=your-clicksend-username
 CLICKSEND_API_KEY=your-clicksend-api-key
 
-# Sender ID alphanumérique ou numéro (ex: "SalonPilot" ou "+41791234567")
-CLICKSEND_SMS_FROM=SalonPilot
+# Sender ID alphanumérique ou numéro (ex: "Witstyl" ou "+41791234567")
+CLICKSEND_SMS_FROM=Witstyl
 
 # Resend - Provider Email
 # Clé API Resend (obtenue depuis https://resend.com/api-keys)
@@ -114,7 +114,7 @@ RESEND_API_KEY=re_your-resend-api-key-here
 
 # Adresse email de l'expéditeur (doit être vérifiée dans Resend)
 # Format: "Nom du Salon <noreply@votredomaine.com>"
-RESEND_FROM=SalonPilot <noreply@salonpilot.ch>
+RESEND_FROM=Witstyl <noreply@witstyl.ch>
 
 # Mode dry run pour les notifications (true/false)
 # Si true : les notifications sont loggées dans la console mais pas réellement envoyées
