--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "NODE_ENV=development tsx server/devServer.ts",
     "dev:client": "vite --port 5001",
     "dev:full": "npm run dev",
     "build": "vite build",
