--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "db:setup": "tsx scripts/apply-sql.ts",
     "db:migrate:notifications": "tsx scripts/apply-notification-tracking-migration.ts",
     "test:sms": "tsx scripts/test-sms-quick.ts",
+    "test:api-prod": "tsx scripts/test-api-prod.ts",
+    "test:vercel-prod": "NODE_ENV=production VERCEL=1 tsx scripts/test-vercel-prod.ts",
     "health": "tsx scripts/check-supabase.ts",
     "normalize:phones": "tsx scripts/normalize-phone-numbers.ts",
     "mcp:reload": "echo 'toggle MCP in Cursor Tools & MCP puis Reload Window'",
@@ -60,6 +62,7 @@
     "@types/memoizee": "^0.4.12",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.5",
+    "build": "^0.1.4",
     "chrono-node": "^2.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -83,6 +86,7 @@
     "next-themes": "^0.4.6",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
+    "npm": "^11.7.0",
     "openai": "^5.22.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
@@ -95,6 +99,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "resend": "^6.5.0",
+    "run": "^1.5.0",
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
