--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/api/index"
+      "destination": "/index.html"
     }
   ],
   "functions": {
