fix: correct 401 error on Reports page
Frontend:
- Improve useReportsData hook to handle isHydrating state
- Don't display 401 errors during auth loading phase
- Filter AUTH_LOADING errors from error display
- Wait for auth hydration before enabling query

Backend:
- Align /api/salons/:salonId/reports route with /api/salons/:salonId/appointments
- Use same salon lookup logic (try normalized, prefixed, raw, then by user_id)
- Improve error logging with timestamps
- Ensure consistent authentication check

Tests:
- Add reports endpoint test to test-api-prod.ts
- Add reports endpoint test to test-vercel-prod.ts

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:sms": "tsx scripts/test-sms-quick.ts",
     "test:api-prod": "tsx scripts/test-api-prod.ts",
     "test:vercel-prod": "NODE_ENV=production VERCEL=1 tsx scripts/test-vercel-prod.ts",
+    "test:vercel-endpoints": "tsx scripts/test-vercel-prod-endpoints.ts",
     "health": "tsx scripts/check-supabase.ts",
     "normalize:phones": "tsx scripts/normalize-phone-numbers.ts",
     "mcp:reload": "echo 'toggle MCP in Cursor Tools & MCP puis Reload Window'",
