--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "normalize:phones": "tsx scripts/normalize-phone-numbers.ts",
     "mcp:reload": "echo 'toggle MCP in Cursor Tools & MCP puis Reload Window'",
     "test:calendar": "echo 'Tests unitaires calendrier - À implémenter avec vitest'",
-    "test:db": "tsx scripts/test-db-connection.ts"
+    "test:db": "tsx scripts/test-db-connection.ts",
+    "print:db-instructions": "tsx scripts/print-supabase-db-instructions.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
