fix(vercel): resolve ESM module bundling + isolate public routes
- Remove .js extensions from all local TS imports (Vercel-safe ESM)
- Ensure sessionStore is statically bundled (no ERR_MODULE_NOT_FOUND)
- Isolate public routes from DB/session init
- Keep lazy session store with MemoryStore fallback
- Public routes stable <200ms, protected routes robust

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mcp:reload": "echo 'toggle MCP in Cursor Tools & MCP puis Reload Window'",
     "test:calendar": "echo 'Tests unitaires calendrier - À implémenter avec vitest'",
     "test:db": "tsx scripts/test-db-connection.ts",
+    "test:login-cookie": "NODE_ENV=production VERCEL=1 tsx scripts/test-login-cookie.ts",
     "print:db-instructions": "tsx scripts/print-supabase-db-instructions.ts"
   },
   "dependencies": {
